:package: setup NuGet package generation for dependencies

--- a/Octetus.ConsultasDgii.Core/Octetus.ConsultasDgii.Core.csproj
+++ b/Octetus.ConsultasDgii.Core/Octetus.ConsultasDgii.Core.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netcoreapp2.1;net45</TargetFrameworks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
