Reemplaza componente de consultas para simplificar y mejorar las consultas

--- a/Octetus.ConsultasDgii.Scraping/Octetus.ConsultasDgii.Scraping.csproj
+++ b/Octetus.ConsultasDgii.Scraping/Octetus.ConsultasDgii.Scraping.csproj
@@ -15,6 +15,7 @@
     <PackageProjectUrl>https://github.com/wrobirson/ConsultasDgii</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>DGII</PackageTags>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Octetus.ConsultasDgii.Core\Octetus.ConsultasDgii.Core.csproj" />
+    <ProjectReference Include="..\Octetus.ConsultasDgii.Core\Octetus.ConsultasDgii.csproj" />
   </ItemGroup>
 
   <ItemGroup>
