--- a/Octetus.ConsultasDgii.Tests/Octetus.ConsultasDgii.Tests.csproj
+++ b/Octetus.ConsultasDgii.Tests/Octetus.ConsultasDgii.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Octetus.ConsultasDgii.Scraping\Octetus.ConsultasDgii.Scraping.csproj" />
+    <ProjectReference Include="..\Octetus.ConsultasDgii\Octetus.ConsultasDgii.csproj" />
   </ItemGroup>
 
 </Project>
