Agrega soporte para consultas de e-NCF y actualizar archivos del proyecto
Se agregó el método ConsultarENcf en IServicioConsultasDgii para consultar detalles de e-NCF.

Se introdujo la clase RespuestaConsultaENcf para encapsular los datos de respuesta de e-NCF.

Se eliminó la propiedad no utilizada VálidoHasta de RespuestaConsultaNcf.

Se actualizó la versión del proyecto de 1.0.0 a 1.0.1.

Se mejoró ServicioConsultasWebDgii con lógica para consultas de e-NCF, incluyendo validación y análisis de respuestas.

--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 
 # PublishProfiles
 /DemoNet4XWeb/Properties/PublishProfiles
+/Octetus.ConsultasDgii/Properties/PublishProfiles/FolderProfile.pubxml
