--- a/Octetus.ConsultasDgii/Octetus.ConsultasDgii.csproj
+++ b/Octetus.ConsultasDgii/Octetus.ConsultasDgii.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net8.0;net45</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Version>1.0.1</Version>
   </PropertyGroup>
